@@ -26,6 +26,11 @@ class CUrl {
 	protected $query;
 	protected $arguments = array();
 
+	/**
+	 * WARNING: the class doesn't support parsing query strings with multi-dimentional arrays.
+	 *
+	 * @param string|null $url
+	 */
 	public function __construct($url = null) {
 		if (empty($url)) {
 			$this->formatGetArguments();
@@ -86,7 +91,7 @@ class CUrl {
 
 				if (strpos($arg, '=') !== false) {
 					list($name, $value) = explode('=', $arg);
-					$this->arguments[$name] = isset($value) ? urldecode($value) : '';
+					$this->arguments[urldecode($name)] = urldecode($value);
 				}
 				else {
 					$this->arguments[$arg] = '';
