@@ -33,6 +33,11 @@ Curl.prototype = {
 	query:		'',
 	args:		null,
 
+	/**
+	 * WARNING: the class doesn't support parsing query strings with multi-dimentional arrays.
+	 *
+	 * @param url
+	 */
 	initialize: function(url) {
 		url = url || location.href;
 
@@ -140,17 +145,7 @@ Curl.prototype = {
 	},
 
 	formatQuery: function() {
-		if (this.args.lenght < 1) {
-			return;
-		}
-
-		var query = [];
-		for (var key in this.args) {
-			if (typeof(this.args[key]) != 'undefined' && !is_null(this.args[key])) {
-				query.push(key + '=' + encodeURIComponent(this.args[key]));
-			}
-		}
-		this.query = query.join('&');
+		this.query = jQuery.param(this.args);
 	},
 
 	formatArguments: function() {
@@ -167,7 +162,7 @@ Curl.prototype = {
 			if (keyval.length > 1) {
 				try {
 					var tmp = keyval[1].replace(/\+/g, '%20');
-					this.args[keyval[0]] = decodeURIComponent(tmp);
+					this.args[decodeURIComponent(keyval[0])] = decodeURIComponent(tmp);
 				}
 				catch(exc) {
 					this.args[keyval[0]] = keyval[1];
